# WKYB

./: .gitignore  README.md  console.txt  index.html  main.py  pyproject.toml
docs/: 260429_Client-Data-Intake.md  260429_International-Client-Considerations.md  260429_Per-Client-Onboarding-Workflow.md  260429_Production-Readiness-Checklist.md
scripts/: scrape_site.py
src/adapters/: lmstudio.js  qwen.js
src/core/: engine.js  prompt-builder.js
src/customers/: _template.json  acme-dental.json  nordlicht-sanitaer.json
src/themes/: dark.json  enadyne.json  glass.json
src/ui/: chat-element.js  styles.js
