[project]
name = "wkyb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "graphifyy>=0.5.5",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "playwright>=1.59.0",
    "watchdog>=6.0.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
]
